--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cosmicjs/sdk": "^1.0.9",
+    "dayjs": "^1.11.9",
     "lucide": "^0.268.0",
     "lucide-react": "^0.268.0",
     "react": "^18.2.0",
